log
Thu 20 Apr 2023 10:35:55 PM UTC: 
 tests:  1|8
total_score: 0/70
0cee5ff
Fri 21 Apr 2023 12:38:37 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
b240a79
Fri 21 Apr 2023 12:39:06 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:7: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   41 |   temp->root=NULL;
      |       ^~
treemap.c:40:27: note: referencing an object of size 8 allocated by ‘malloc’
   40 |   TreeMap *temp=(TreeMap*)malloc(sizeof(TreeMap*));
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:42:7: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   42 |   temp->current=temp->root;
      |       ^~
treemap.c:40:27: note: referencing an object of size 8 allocated by ‘malloc’
   40 |   TreeMap *temp=(TreeMap*)malloc(sizeof(TreeMap*));
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:43:7: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   43 |   temp->lower_than = lower_than;
      |       ^~
treemap.c:40:27: note: referencing an object of size 8 allocated by ‘malloc’
   40 |   TreeMap *temp=(TreeMap*)malloc(sizeof(TreeMap*));
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
26f72cd
Fri 21 Apr 2023 12:45:50 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
65c1429
Fri 21 Apr 2023 01:34:33 AM UTC: 
 treemap.c | 58 ++++++++++++++++++++++++++--------------------------------
 1 file changed, 26 insertions(+), 32 deletions(-)
 tests:  6|7
total_score: 5/70
88234b3
Fri 21 Apr 2023 01:38:50 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|7
total_score: 5/70
5fb4fd4
Fri 21 Apr 2023 12:30:21 PM UTC: 
 treemap.c | 23 ++++++++++++++++++-----
 1 file changed, 18 insertions(+), 5 deletions(-)
 tests:  0|0
1e37c16
Fri 21 Apr 2023 12:33:31 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
268f164
Fri 21 Apr 2023 12:35:44 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
4317377
Fri 21 Apr 2023 12:42:31 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
93bc8c0
Fri 21 Apr 2023 12:44:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
40d513e
Fri 21 Apr 2023 12:44:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2fb2096
Fri 21 Apr 2023 12:45:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ceb6206
Fri 21 Apr 2023 12:47:05 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
dba9b86
Fri 21 Apr 2023 12:48:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
d2a10ba
Fri 21 Apr 2023 01:15:28 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|0
89faadb
Fri 21 Apr 2023 01:21:49 PM UTC: 
 treemap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c:59:1: error: expected identifier or ‘(’ before ‘}’ token
   59 | }
      | ^
Compilation failed
d55a3a4
Fri 21 Apr 2023 01:21:57 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
ba873e7
Fri 21 Apr 2023 01:29:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
dbc7212
Fri 21 Apr 2023 01:32:53 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0a7001b
Fri 21 Apr 2023 03:14:52 PM UTC: 
 treemap.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  0|0
bfe0130
Fri 21 Apr 2023 07:26:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
601e12b
Fri 21 Apr 2023 07:32:35 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
13388db
Fri 21 Apr 2023 07:32:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
374600a
Fri 21 Apr 2023 07:33:48 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cccgH470.o: in function `erase_test1':
test.c:(.text+0xa9a): undefined reference to `eraseTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cccgH470.o: in function `erase_test2':
test.c:(.text+0xb2a): undefined reference to `eraseTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cccgH470.o: in function `erase_test3':
test.c:(.text+0xbda): undefined reference to `eraseTreeMap'
collect2: error: ld returned 1 exit status
Compilation failed
a002b6f
Fri 21 Apr 2023 07:33:52 PM UTC: 
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccaRo6Ny.o: in function `erase_test1':
test.c:(.text+0xa9a): undefined reference to `eraseTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccaRo6Ny.o: in function `erase_test2':
test.c:(.text+0xb2a): undefined reference to `eraseTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccaRo6Ny.o: in function `erase_test3':
test.c:(.text+0xbda): undefined reference to `eraseTreeMap'
collect2: error: ld returned 1 exit status
Compilation failed
7c0aa62
Fri 21 Apr 2023 07:34:31 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
d5be8cf
Fri 21 Apr 2023 07:36:08 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
234e78c
Fri 21 Apr 2023 07:45:13 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
0f34fc0
Fri 21 Apr 2023 07:46:55 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d59e551
Fri 21 Apr 2023 07:56:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
098acca
Fri 21 Apr 2023 07:58:26 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
a238403
Fri 21 Apr 2023 11:02:18 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
cb1c2e9
Fri 21 Apr 2023 11:03:27 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
eff46c3
Fri 21 Apr 2023 11:33:58 PM UTC: 
 treemap.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  0|0
8a2d1b7
Fri 21 Apr 2023 11:43:39 PM UTC: 
 treemap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  0|0
395e57e
Fri 21 Apr 2023 11:47:25 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
5f1c188
Fri 21 Apr 2023 11:53:35 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2f91597
Sat 22 Apr 2023 12:06:14 AM UTC: 
 treemap.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
In file included from test.c:4:
treemap.c:104:1: error: expected identifier or ‘(’ before ‘}’ token
  104 | }
      | ^
Compilation failed
242c663
Sat 22 Apr 2023 12:06:27 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
a5b8899
Sat 22 Apr 2023 01:35:39 AM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
3333709
Sat 22 Apr 2023 01:39:37 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
eb292da
Sat 22 Apr 2023 01:43:29 AM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  17|4
total_score: 35/70
a08d392
Sat 22 Apr 2023 07:20:14 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  19|3
total_score: 40/70
9f4fd3d
Sat 22 Apr 2023 07:59:23 PM UTC: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  20|3
total_score: 45/70
d0d4c38
Sat 22 Apr 2023 08:00:30 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  20|3
total_score: 45/70
f48ed0d
Sat 22 Apr 2023 08:01:05 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  20|3
total_score: 45/70
f784a71
